cases/fiasco_17_10/configs/misc/build_error_investigations/with_errors/1/processed/134.config.out
  ... Making continuation-arm.o
  ... Making timer_tick.o
  ... Making timer_tick-arm.o
  ... Making timer_tick-exynos-mct.o
  ... Making platform_control.o
  ... Making platform_control-arm-exynos.o
  ... Making sched_context-wfq.o
  ... Making sched_context-fixed_prio.o
  ... Making sched_context-fp_wfq.o
  ... Making sched_context.o
  ... Making utcb_init.o
  ... Making utcb_init-arm.o
  ... Making perf_cnt.o
  ... Making perf_cnt-arm.o
  ... Making perf_cnt-arm-32.o
  ... Making trap_state.o
  ... Making buddy_alloc.o
  ... Making vkey.o
  ... Making kdb_ke-arm.o
  ... Making prio_list.o
  ... Making ipi.o
  ... Making ipi-arm.o
/home/vagrant/fiasco_17_10/src/kernel/fiasco/src/kern/arm/ipi-arm.cpp: In static member function ‘static void Ipi::init(Cpu_number)’:
/home/vagrant/fiasco_17_10/src/kernel/fiasco/src/kern/arm/ipi-arm.cpp:47:39: error: base operand of ‘->’ has non-pointer type ‘Per_cpu_ptr<Static_object<Gic> >’
   _ipi.cpu(cpu)._sgi_target = Pic::gic->pcpu_to_sgi(Cpu::cpus.cpu(cpu).phys_id());
                                       ^
/home/vagrant/fiasco_17_10/src/kernel/fiasco/src/Makerules.global:118: recipe for target 'ipi-arm.o' failed
make[2]: *** [ipi-arm.o] Error 1
make[2]: Leaving directory '/home/vagrant/fiasco_17_10/src/kernel/fiasco/build'
/home/vagrant/fiasco_17_10/src/kernel/fiasco/src/Makefile:153: recipe for target 'all' failed
make[1]: *** [all] Error 2
make[1]: Leaving directory '/home/vagrant/fiasco_17_10/src/kernel/fiasco/build'
Makefile:72: recipe for target 'build' failed
make: *** [build] Error 2

return code 2
